Convert and print json to cli

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <tr>
             <td align="center">#</td><td align="center">#</td><td align="center">#</td><td align="center">#</td align="center"><td align="center">#</td>
         </tr>
-        <tr>
-            <td align="center">45435</td><td align="center">123</td><td align="center">234</td><td align="center">345</td align="center"><td align="center">4.5</td>
-        </tr>
+        <!--<tr>-->
+            <!--<td align="center">45435</td><td align="center">123</td><td align="center">234</td><td align="center">345</td align="center"><td align="center">4.5</td>-->
+        <!--</tr>-->
     </table>
   </body>
 </html>
